# openapi/path/operations.yaml
@@ -1,15 +1,39 @@
-  /operations/for_account:
+  /operations:
     get:
-      operationId: getOperationsForAccount
-      summary: Get a list of maximum 5 stellar operations associated with the given account depending on the pagination parameters 'cursor, 'order' and 'limit'.
-      description: Returns operations associated with the given account. It can only load a maximum of 5 operations at a time.
+      operationId: getOperations
+      summary: Get the list of the maximum top 5 stellar operations for the given parameters and depending on the pagination parameters 'cursor, 'order' and 'limit'.
+      description: Returns the fetched list of the maximum top 5 stellar operations for the given parameters and depending on the pagination parameters 'cursor, 'order' and 'limit'. It can only load a maximum of 5 operations at a time.
       parameters:
         - name: account_id
           in: query
           schema:
             type: string
-          required: true
-          description: Id of the account to get the information for.
+          required: false
+          description: Id of the account to search the operations for.
+        - name: ledger_sequence
+          in: query
+          schema:
+            type: string
+          required: false
+          description: Sequence nr of the ledger to search the operations for.
+        - name: liquidity_pool_id
+          in: query
+          schema:
+            type: string
+          required: false
+          description: Id of the liquidity pool to search the operations for.
+        - name: claimable_balance_id
+          in: query
+          schema:
+            type: string
+          required: false
+          description: Id of the claimable balance to search the operations for.
+        - name: transaction_hash
+          in: query
+          schema:
+            type: string
+          required: false
+          description: hash/id of the transaction to search the operations for.
         - name: include_failed
           in: query
           schema:
@@ -56,253 +80,7 @@
               schema:
                 type: string
         "404":
-          description: Account was not found on the Stellar Network.
-          content:
-            text/plain:
-              schema:
-                type: string
-  /operations/for_ledger:
-    get:
-      operationId: getOperationsForLedger
-      summary: Get a list of maximum 5 stellar operations associated with the given ledger depending on the pagination parameters 'cursor, 'order' and 'limit'.
-      description: Returns operations associated with the given ledger. It can only load a maximum of 5 operations at a time.
-      parameters:
-        - name: ledger_sequence
-          in: query
-          schema:
-            type: string
-          required: true
-          description: Sequence nr of the ledger to get the information for.
-        - name: include_failed
-          in: query
-          schema:
-            type: string
-          required: false
-          description: Must be set to true if the result should also include failed operations.
-        - name: network
-          in: query
-          schema:
-            type: string
-          required: true
-          description: Stellar Network to be used. Can be 'public', 'testnet' or 'futurenet'. Use 'public' as default. Allow the user to specify the network.
-        - name: cursor
-          in: query
-          schema:
-            type: string
-          required: false
-          description: The cursor value for use in pagination. A number that points to a specific location in a collection of responses and is pulled from the paging_token value of a record.
-        - name: order
-          in: query
-          schema:
-            type: string
-          required: true
-          description: A designation of the order in which records should appear. Options include 'asc' (for ascending) or 'desc' (for descending). If this argument isn't set, it defaults to asc.
-        - name: limit
-          in: query
-          schema:
-            type: integer
-          required: true
-          description: The number of records to be returned. Currently maximum 5. If the user asks for more please let him know that you can only load maximum 5 at a time.
-      responses:
-        "200":
-          description: A complex object array response holding a list of operations for the ledger.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/OperationEntry'
-        "400":
-          description: Paging limit was higher than allowed.
-          content:
-            text/plain:
-              schema:
-                type: string
-        "404":
-          description: Ledger was not found on the Stellar Network.
-          content:
-            text/plain:
-              schema:
-                type: string
-  /operations/for_liquidity_pool:
-    get:
-      operationId: getOperationsForLiquidityPool
-      summary: Get a list of maximum 5 stellar operations associated with the given liquidity pool depending on the pagination parameters 'cursor, 'order' and 'limit'.
-      description: Returns operations associated with the given liquidity pool. It can only load a maximum of 5 operations at a time.
-      parameters:
-        - name: liquidity_pool_id
-          in: query
-          schema:
-            type: string
-          required: true
-          description: Id of the liquidity pool to get the information for.
-        - name: include_failed
-          in: query
-          schema:
-            type: string
-          required: false
-          description: Must be set to true if the result should also include failed operations.
-        - name: network
-          in: query
-          schema:
-            type: string
-          required: true
-          description: Stellar Network to be used. Can be 'public', 'testnet' or 'futurenet'. Use 'public' as default. Allow the user to specify the network.
-        - name: cursor
-          in: query
-          schema:
-            type: string
-          required: false
-          description: The cursor value for use in pagination. A number that points to a specific location in a collection of responses and is pulled from the paging_token value of a record.
-        - name: order
-          in: query
-          schema:
-            type: string
-          required: true
-          description: A designation of the order in which records should appear. Options include 'asc' (for ascending) or 'desc' (for descending). If this argument isn't set, it defaults to asc.
-        - name: limit
-          in: query
-          schema:
-            type: integer
-          required: true
-          description: The number of records to be returned. Currently maximum 5. If the user asks for more please let him know that you can only load maximum 5 at a time.
-      responses:
-        "200":
-          description: A complex object array response holding a list of operations for the liquidity pool.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/OperationEntry'
-        "400":
-          description: Paging limit was higher than allowed.
-          content:
-            text/plain:
-              schema:
-                type: string
-        "404":
-          description: Liquidity pool was not found on the Stellar Network.
-          content:
-            text/plain:
-              schema:
-                type: string
-  /operations/for_claimable_balance:
-    get:
-      operationId: getOperationsForClaimableBalance
-      summary: Get a list of maximum 5 stellar operations associated with the given claimable balance depending on the pagination parameters 'cursor, 'order' and 'limit'.
-      description: Returns operations associated with the given claimable balance. It can only load a maximum of 5 operations at a time.
-      parameters:
-        - name: claimable_balance_id
-          in: query
-          schema:
-            type: string
-          required: true
-          description: Id of the claimable balance to get the information for.
-        - name: include_failed
-          in: query
-          schema:
-            type: string
-          required: false
-          description: Must be set to true if the result should also include failed operations.
-        - name: network
-          in: query
-          schema:
-            type: string
-          required: true
-          description: Stellar Network to be used. Can be 'public', 'testnet' or 'futurenet'. Use 'public' as default. Allow the user to specify the network.
-        - name: cursor
-          in: query
-          schema:
-            type: string
-          required: false
-          description: The cursor value for use in pagination. A number that points to a specific location in a collection of responses and is pulled from the paging_token value of a record.
-        - name: order
-          in: query
-          schema:
-            type: string
-          required: true
-          description: A designation of the order in which records should appear. Options include 'asc' (for ascending) or 'desc' (for descending). If this argument isn't set, it defaults to asc.
-        - name: limit
-          in: query
-          schema:
-            type: integer
-          required: true
-          description: The number of records to be returned. Currently maximum 5. If the user asks for more please let him know that you can only load maximum 5 at a time.
-      responses:
-        "200":
-          description: A complex object array response holding a list of operations for the claimable balance.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/OperationEntry'
-        "400":
-          description: Paging limit was higher than allowed.
-          content:
-            text/plain:
-              schema:
-                type: string
-        "404":
-          description: Claimable balance was not found on the Stellar Network.
-          content:
-            text/plain:
-              schema:
-                type: string
-  /operations/for_transaction:
-    get:
-      operationId: getOperationsForTransaction
-      summary: Get a list of maximum 5 stellar operations associated with the given transaction hash depending on the pagination parameters 'cursor, 'order' and 'limit'.
-      description: Returns operations associated with the given transaction. It can only load a maximum of 5 operations at a time.
-      parameters:
-        - name: transaction_hash
-          in: query
-          schema:
-            type: string
-          required: true
-          description: hash/id of the transaction to get the information for.
-        - name: network
-          in: query
-          schema:
-            type: string
-          required: true
-          description: Stellar Network to be used. Can be 'public', 'testnet' or 'futurenet'. Use 'public' as default. Allow the user to specify the network.
-        - name: cursor
-          in: query
-          schema:
-            type: string
-          required: false
-          description: The cursor value for use in pagination. A number that points to a specific location in a collection of responses and is pulled from the paging_token value of a record.
-        - name: order
-          in: query
-          schema:
-            type: string
-          required: true
-          description: A designation of the order in which records should appear. Options include 'asc' (for ascending) or 'desc' (for descending). If this argument isn't set, it defaults to asc.
-        - name: limit
-          in: query
-          schema:
-            type: integer
-          required: true
-          description: The number of records to be returned. Currently maximum 5. If the user asks for more please let him know that you can only load maximum 5 at a time.
-      responses:
-        "200":
-          description: A complex object array response holding a list of operations for the transaction.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/OperationEntry'
-        "400":
-          description: Paging limit was higher than allowed.
-          content:
-            text/plain:
-              schema:
-                type: string
-        "404":
-          description: Operation was not found on the Stellar Network.
+          description: Parameter value was not found on the Stellar Network.
           content:
             text/plain:
               schema:
